turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:8: error: not found: value gauceh
  gauceh(90);avance(150);droite(90)
  ^